<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Workshopz</string>
    <string name="action_settings">Settings</string>
    <string name="loading_text">Loading...</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="username_label">Email</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="position_label">Position</string>
    <string name="email_address_label">Email</string>
    <string name="name_label">Name</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="login_submit_label">Login</string>
    <string name="empty_username_error">Username cannot be empty</string>
    <string name="empty_password_error">Password cannot be empty</string>
    <string name="network_error">Network error</string>
    <string name="date_label">Date: </string>
    <string name="speakers_label">Speakers: </string>
    <string name="syncdb_service_name">workshopz syncronizer</string>
    <string name="register_label">Register</string>
    <string name="recover_label">Recover password</string>
    <string name="register_button_label">Register</string>
    <string name="not_empty_message">This field is required</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="paswords_dont_match">Value does not match with the password</string>
    <string name="register_dialog_title">Register new user</string>
    
    
    
    <string name="ws_base_url">http://192.168.2.102:8080</string>
    
</resources>
