<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal" >
    

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="@dimen/input_size"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:hint="@string/email_address_label"
        android:inputType="textEmailAddress"
        android:text="das_mata@yahoo.com"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/input_size"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:hint="@string/password_label"
        android:inputType="textPassword"
        android:text="asdasd"
        />
    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="@dimen/input_size"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:hint="@string/confirm_password_label"
        android:inputType="textPassword"
        android:text="asdasd"
        />
    <EditText
        android:id="@+id/name"
        android:layout_width="@dimen/input_size"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:hint="@string/name_label"
        android:inputType="textPersonName"
        android:text="yo"
        />
    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="@dimen/input_size"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:hint="@string/phone_number_label"
        android:inputType="phone"
        android:text="8989989"
        />    
    <EditText
        android:id="@+id/position"
        android:layout_width="@dimen/input_size"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:imeOptions="actionSend"
        android:imeActionLabel="@string/register_button_label"
        android:hint="@string/position_label"
        android:inputType="text"
        android:text="sse"
        />
    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button_label"/>
</LinearLayout>
