<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity" >
    
    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:hint="@string/username_label" />
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:imeOptions="actionGo"
        android:nextFocusDown="@+id/loginSubmit"
        android:imeActionLabel="Login"
        android:hint="@string/password_label" />
    <Button 
        android:id="@id/loginSubmit"
        android:text="@string/login_submit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
